Bug 388273 - plasma-nm doesn't show available VPN connections
Summary: plasma-nm doesn't show available VPN connections
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Networks widget (other bugs)
Version First Reported In: master
Platform: Arch Linux Linux
: NOR major
Target Milestone: 1.0
Assignee: Jan Grulich
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-12-27 14:34 UTC by vm
Modified: 2024-12-23 18:26 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
only ethernet here (17.12 KB, image/png)
2017-12-27 14:34 UTC, vm
Details

Note You need to log in before you can comment on or make changes to this bug.
Description vm 2017-12-27 14:34:41 UTC
Created attachment 109543 [details]
only ethernet here

plasma-nm doesn't show configured (available) VPN connections.
several versions earlier all works fine, now they just dissapear from ui.




However `nmcli` sees all openvpn connections:

$ nmcli c
NAME             UUID                                  TYPE      DEVICE          
enp3s0           ff51964b-bb1f-46d6-acac-936f0c173040  ethernet  enp3s0          
**123              9048265d-bea1-4979-8449-1131b129e8b7  vpn       --  **            
**support          94e3ea44-ec0f-438c-bd69-f514954c4511  vpn       --  **
Comment 1 vm 2017-12-27 14:40:22 UTC
i've just build 5.10.0 (from github sources) and it works OK
all VPN connections visible and i can connect and disconnect using UI.
Comment 2 vm 2017-12-27 15:11:02 UTC
5.10.5 - works
5.11.0 - broken
Comment 3 vm 2017-12-27 15:21:02 UTC
5.10.5 - works
5.10.95 - broken
Comment 4 Jan Grulich 2018-01-02 09:26:31 UTC
Are you connected to the internet? We changed it to show VPN connections only when you are connected to the internet.

It's this change: https://cgit.kde.org/plasma-nm.git/commit/?h=Plasma/5.11&id=3412d7b3dd58c77ba3514a9034d979a12277398b
Comment 5 vm 2018-01-02 20:00:24 UTC
Yes. 95% its it. 

I'm connected to the internet
...Thru corporate proxy. 

Maybe this is the cause. 
I use cntlm to pass thru proxy and have HTTP_PROXY, HTTPS_PROXY, FTP_PROXY, FTPS_PROXY (+ lowercase variants) env variables pointing to CNTLM (i.e. http://127.0.0.1:3128). 

KDE desktop tools, chrome, intellij idea, almost all software correctly detects internet connection.
Comment 6 vm 2018-01-02 20:06:08 UTC
Im not sure how nm checks for internet connections, but proxy may simply block connections to some site (if its tries to ping some site). In this sense not the best change for me (and many other users who uses applet and vpn).

What was a reason about this change?
Comment 7 vm 2018-01-02 20:09:24 UTC
And why this behavior not consistent with nmcli
Comment 8 Jan Grulich 2018-01-03 07:41:15 UTC
Git commit 9e345849b94d1a8018f3d9634e9e2c87ad13e6be by Jan Grulich.
Committed on 03/01/2018 at 07:31.
Pushed by grulich into branch 'master'.

Show VPN connections even with a limited connection

User might be behind proxy, resulting that NM detects we have limited connection

M  +3    -1    libs/models/networkmodelitem.cpp

https://commits.kde.org/plasma-nm/9e345849b94d1a8018f3d9634e9e2c87ad13e6be
Comment 9 Ben Cooksley 2024-12-23 18:26:03 UTC
Bulk transfer as requested in T17796