Show VPN connections even with a limited connection

User might be behind proxy, resulting that NM detects we have limited connection

BUG:388273